--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
          <header class="sidenav-header">
            <button class="openbtn" id="openBtn" >☰</button>
             <div class="nav-logo-container">  
-                <a href="#">
+                <a href="index.html">
                     <img src="images/IbtechLogo__2.png" class="nav-logo" alt="logo">
                     <span>IBtech</span>
                 </a>
@@ -439,6 +439,12 @@
          <!-- Sidebar menu -->
          <section id="side-navbar">
             <nav class="side-menubar">
+                 <div class="nav-logo-container-sidebar">  
+                    <a href="index.html">
+                      <img src="images/IbtechLogo__2.png" class="nav-logo" alt="logo">
+                      <span>IBtech</span>
+                     </a>
+                  </div>
                 <ul class="side-menubarList">
                     <li id="dashboard-list-cont" class="active">
                         <i class="fas fa-house-chimney"></i>
