--- a/Billpayment/account.html
+++ b/Billpayment/account.html
@@ -12,6 +12,7 @@
 <body>
     <!-- Navigation bar -->
          <header class="sidenav-header">
+                       <button class="openbtn" id="openBtn"> <i class="fas fa-bars"></i> </button>
             <div class="nav-logo-container">
                 <a href="../index.html">
                     <img src="../images/IbtechLogo__2.png" class="nav-logo" alt="logo">
@@ -19,7 +20,6 @@
                 </a>
             </div>
             <div class="navbar-icon">
-                <span class="fas fa-bell "></span>
                  <div class="user-logout">
                     <span class="fas fas fa-user"></span>
                     <a class="hidden-logout" href="#">Logout</a>
@@ -29,6 +29,12 @@
          <!-- Sidebar menu -->
          <section id="side-navbar">
                   <nav class="side-menubar">
+                    <div class="nav-logo-container-sidebar">  
+                        <a href="index.html">
+                        <img src="../images/IbtechLogo__2.png" class="nav-logo" alt="logo">
+                        <span>IBtech</span>
+                        </a>
+                    </div>
                 <ul class="side-menubarList">
                     <li id="dashboard-list-cont" class="active">
                         <i class="fas fa-house-chimney"></i>
