--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
 
     <!-- Navigation bar -->
          <header class="sidenav-header">
-           <button class="openbtn" id="openBtn" >☰</button>
+           <button class="openbtn" id="openBtn"> <i class="fas fa-bars"></i> </button>
             <div class="nav-logo-container">  
                 <a href="index.html">
                     <img src="images/IbtechLogo__2.png" class="nav-logo" alt="logo">
@@ -459,7 +459,7 @@
                             <div class="accordion-item">
                                 <li class="accordion-button collapsed bg-white shadow-0 border-0 p-0" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
                                     <i class="fas fas far fa-lightbulb"></i>
-                                    <a href="">Utility Payments</a>
+                                    <a href="">Utility payments</a>
                                 </li>
                                 <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
                                     <div class="accordion-body">
@@ -595,7 +595,7 @@
       </footer>
 
 
-
+      
 <script src="script.js"></script>
 <script src="bootstrap/bootstrap.bundle.min.js"></script>
 </body>
